--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,9 @@ futures = "0.3"
 cpal = "0.15"
 hound = "3.5"
 
-# FFmpeg for audio encoding (optional)
+# FFmpeg for audio encoding
 ffmpeg = { package = "ffmpeg-next", version = "7.0", optional = true }
-ffmpeg-sys-next = { version = "7.1.0", optional = true }
+ffmpeg-sys-next = { version = "7.1.0", optional = true, features = ["build"] }
 
 # Video/Screen capture - let's use a different approach for now
 # scap = { version = "0.1.1" }
@@ -38,11 +38,14 @@ anyhow = "1.0"
 thiserror = "1.0"
 log = "0.4"
 env_logger = "0.10"
+uuid = { version = "1.0", features = ["v4"] }
 
 # Platform-specific dependencies
 [target.'cfg(target_os = "macos")'.dependencies]
 screencapturekit = "0.2"
 core-foundation = "0.9"
+objc = "0.2"
+cocoa = "0.24"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.52", features = [
