--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,16 @@ futures = "0.3"
 cpal = { git = "https://github.com/RustAudio/cpal", rev = "f43d36e55494993bbbde3299af0c53e5cdf4d4cf" }
 hound = "3.5"
 
-# FFmpeg for audio encoding (Cap's fork)
-ffmpeg = { package = "ffmpeg-next", git = "https://github.com/CapSoftware/rust-ffmpeg", rev = "49db1fede112", optional = true }
-ffmpeg-sys-next = { version = "7.1.0", optional = true, features = ["build"] }
+# FFmpeg for audio/video encoding (Cap's fork)
+ffmpeg = { package = "ffmpeg-next", git = "https://github.com/CapSoftware/rust-ffmpeg", rev = "49db1fede112" }
+ffmpeg-sys-next = { version = "7.1.0", features = ["build"] }
 
 # Cap's screen capture library
 scap = { git = "https://github.com/CapSoftware/scap", rev = "b914379d787f" }
+
+# S3 and cloud storage
+aws-sdk-s3 = "1.0"
+aws-config = "1.0"
 
 # FFI for Node.js integration
 napi = { version = "2.0", features = ["async"] }
@@ -64,8 +68,9 @@ pipewire = "0.7"
 libpulse-binding = "2.27"
 
 [features]
-default = []
-audio-encoding = ["ffmpeg", "ffmpeg-sys-next"]
+default = ["audio-encoding", "video-encoding"]
+audio-encoding = []
+video-encoding = []
 
 [build-dependencies]
 napi-build = "2.0"
