--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@
 /recording/
 **/*.rs.bk
 Cargo.lock
+/test-audio-output/
 
 # Node.js
-node_modules/
+/node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
