--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,8 @@ lazy_static = "1.4"
 
 # Platform-specific dependencies
 [target.'cfg(target_os = "macos")'.dependencies]
+# 🎯 REAL Cap dependencies for system audio capture
+cidre = { git = "https://github.com/yury/cidre", rev = "ef04aaabe14ffbbce4a330973a74b6d797d073ff" }
 screencapturekit = { git = "https://github.com/CapSoftware/screencapturekit-rs", rev = "7ff1e103742e56c8f6c2e940b5e52684ed0bed69" }
 core-foundation = "0.9"
 core-graphics = "0.23"
